--- a/build.yaml
+++ b/build.yaml
@@ -19,7 +19,7 @@
 #
 ---
 include:
-  - board: nice_nano_v2
+  - board: nice_nano
     shield: kaasch_keys_left
-  - board: nice_nano_v2
+  - board: nice_nano
     shield: kaasch_keys_right
