--- a/build.yaml
+++ b/build.yaml
@@ -23,3 +23,5 @@ include:
     shield: kaasch_keys_left
   - board: nice_nano
     shield: kaasch_keys_right
+  - board: nice_nano
+    shield: settings_reset
