--- a/build.yaml
+++ b/build.yaml
@@ -21,6 +21,8 @@
 include:
   - board: nice_nano
     shield: kaasch_keys_left
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
   - board: nice_nano
     shield: kaasch_keys_right
   - board: nice_nano
